--- a/school_reg/register/templates/register/schedule_class.html
+++ b/school_reg/register/templates/register/schedule_class.html
@@ -17,7 +17,7 @@
         {% endif %}
         <br/>
         <div style="overflow-x: auto">
-            <table class="table" cellpadding="6">
+            <table class="table">
             {% for day in weekdays %}
                 {% if day.1 == weekdays.0.1 %}
                     <tr>
