--- a/school_reg/register/templates/register/base.html
+++ b/school_reg/register/templates/register/base.html
@@ -28,7 +28,9 @@
                 {% elif user.profile.role == 1 %}
                 <a class="nav-item nav-link" href="{% url 'parent-panel-view' %}">Panel Rodzica</a>
                 {% endif %}
+                {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'schedules' %}">Plany zajec</a>
+                {% endif %}
                 {% if user.profile.role == 2 %}
                     <a class="nav-item nav-link" href="{% url 'add-advert' %}">Dodaj ogloszenie</a>
                 {% endif %}
@@ -61,19 +63,6 @@
             {% endif %}
           {% block content %}{% endblock %}
         </div>
-{#      <div class="col-md-4">#}
-{#          <div class="content-section">#}
-{#            <h3>Our Sidebar</h3>#}
-{#            <p class='text-muted'>You can put any information here you'd like.#}
-{#              <ul class="list-group">#}
-{#                <li class="list-group-item list-group-item-light">Latest Posts</li>#}
-{#                <li class="list-group-item list-group-item-light">Announcements</li>#}
-{#                <li class="list-group-item list-group-item-light">Calendars</li>#}
-{#                <li class="list-group-item list-group-item-light">etc</li>#}
-{#              </ul>#}
-{#            </p>#}
-{#          </div>#}
-{#        </div>#}
       </div>
     </main>
 
