--- a/school_reg/register/templates/register/schedule_class.html
+++ b/school_reg/register/templates/register/schedule_class.html
@@ -42,8 +42,8 @@
                                 {% if schedule %}
                                     {{ schedule.subject.name }}<br>
                                     <a href="{% url 'room-schedule' schedule.room.id %}">{{ schedule.room.name }}</a><br>
-                                    <a href="{% url 'teacher-schedule' schedule.teacher.id %}">
-                                    {{ schedule.teacher.user.first_name|first|upper }}{{ schedule.teacher.user.last_name|first|upper }}
+                                    <a href="{% url 'teacher-schedule' schedule.lesson.teacher.id %}">
+                                    {{ schedule.lesson.teacher.user.first_name|first|upper }}{{ schedule.lesson.teacher.user.last_name|first|upper }}
                                     </a><br>
                                 {% endif %}
                                 </td>
@@ -56,7 +56,7 @@
                                 {% endif %}
                                 {% if schedule %}
                                     {{ schedule.subject.name }}<br>
-                                    <a href="{% url 'class-schedule' schedule.classes.id %}">{{ schedule.classes.name }}</a><br>
+                                    <a href="{% url 'class-schedule' schedule.lesson.classes.id %}">{{ schedule.lesson.classes.name }}</a><br>
                                     <a href="{% url 'room-schedule' schedule.room.id %}">{{ schedule.room.name }}</a><br>
                                 {% endif %}
                                 </td>
@@ -68,11 +68,11 @@
                                 <td>
                                 {% endif %}
                                 {% if schedule %}
-                                    {{ schedule.subject.name }}<br>
-                                    <a href="{% url 'teacher-schedule' schedule.teacher.id %}">
-                                    {{ schedule.teacher.user.first_name|first|upper }}{{ schedule.teacher.user.last_name|first|upper }}
+                                    {{ schedule.lesson.subject.name }}<br>
+                                    <a href="{% url 'teacher-schedule' schedule.lesson.teacher.id %}">
+                                    {{ schedule.lesson.teacher.user.first_name|first|upper }}{{ schedule.lesson.teacher.user.last_name|first|upper }}
                                     </a><br>
-                                    <a href="{% url 'class-schedule' schedule.classes.id %}">{{ schedule.classes.name }}</a><br>
+                                    <a href="{% url 'class-schedule' schedule.lesson.classes.id %}">{{ schedule.lesson.classes.name }}</a><br>
                                 {% endif %}
                                 </td>
                             {% endif %}
