next part test views

--- a/school_reg/register/templates/register/classes.html
+++ b/school_reg/register/templates/register/classes.html
@@ -2,7 +2,7 @@
 {% block content %}
         <article class="media content-section">
           <div class="media-body">
-                {% for classs in classes %}
+                {% for classs in object_list %}
                     <div class="article-metadata">
                         <a class="mr-2" href="{% url 'class-details' classs.id %}">{{ classs.name }}</a>
                         - <a href="{% url 'teacher-details' classs.educator.id %}">{{ classs.educator }}</a>
@@ -19,5 +19,26 @@
         {% if 'register.add_clasess' in perms %}
             <h3><a class="btn btn-outline-info small" href="{% url 'class-add' %}">dodaj</a></h3>
         {% endif %}
+    {% endif %}
+    {% if is_paginated %}
+        {% if page_obj.has_previous %}
+            <a class="btn btn-outline-info mb-4" href="?page=1">First</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+            {% if page_obj.number == num %}
+                <a class="btn btn-info mb-4" href="?page={{ num }}">{{ num }}</a>
+            {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+                <a class="btn btn-outline-info mb-4" href="?page={{ num }}">{{ num }}</a>
+            {% endif %}
+        {% endfor %}
+
+
+        {% if page_obj.has_next %}
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.next_page_number }}">Next</a>
+            <a class="btn btn-outline-info mb-4" href="?page={{ page_obj.paginator.num_pages }}">Last</a>
+        {% endif %}
+
     {% endif %}
 {% endblock content %}
